fix link overlap on register page

--- a/bookings/static/bookings/css/style.css
+++ b/bookings/static/bookings/css/style.css
@@ -37,10 +37,6 @@ form {
     margin-top: 5px;
 }
 
-#account {
-    padding: 100px;
-}
-
 header {
     background: #8B0000;
     color: white;
